# mediawiki_rest_api

./: .gitignore  Cargo.toml  README.md
src/: bearer_token.rs  error.rs  file.rs  lib.rs  math.rs  page.rs  prelude.rs  rest_api.rs  rest_api_builder.rs  revision.rs  search.rs  transform.rs  utilities.rs
test_data/: file_get.json  math_popup_html.json  page_create.json  page_edit.json  page_get.json  page_get_bare.json  page_get_html.html  page_get_with_html.json  page_history.json  page_history_counts.json  page_links_language.json  page_links_media.json  page_lint.json  revision_compare.json  revision_get.json  revision_get_bare.json  revision_get_html.html  revision_get_with_html.json  revision_lint.json  search_page.json  search_title.json  wikitext2html.html  wikitext2html_title.html  wikitext2lint.json
