[package]
name = "mediawiki_rest_api"
version = "0.0.2"
edition = "2024"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mediawiki", "REST", "API", "client"]
categories = ["api-bindings"]
description = "A Rust client for the MediaWiki REST API."
repository = "https://github.com/magnusmanske/mediawiki_rest_api"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
unwrap_used = "deny"

[dependencies]
#async-trait = "0.1"
#chrono = "0.4"
#derive-where = "1.5"
#futures = "0.3"
#json-patch = "4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
#uuid = { version = "1", features = ["v4"] }
thiserror = "2"
#regex = "1"
#nutype = { version = "0.6", features = ["regex"] }

[dev-dependencies]
wiremock = "0.6"
http = "1"
