[package]
name = "mediawiki_rest_api"
version = "0.0.3"
edition = "2024"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mediawiki", "REST", "API", "client"]
categories = ["api-bindings"]
description = "A Rust client for the MediaWiki REST API."
repository = "https://github.com/magnusmanske/mediawiki_rest_api"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
unwrap_used = "deny"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"
http = "1"
